--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 base="dark"
-primaryColor="#2ae0ea"
+primaryColor="#2AEEEA"
 backgroundColor="#000000"
-textColor="#ffffff"
+textColor="#FFFFFF"
 font="serif"
